// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP persian/afghanistan IDX page A11y I can see the skip to content link 1`] = `"مشاهده محتوا"`;

exports[`AMP persian/afghanistan IDX page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP persian/afghanistan IDX page AMP Geo config 1`] = `
Object {
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP persian/afghanistan IDX page Analytics ATI 1`] = `
Object {
  "requests": Object {
    "base": "https://logws1363.ati-host.net?",
    "pageview": "\${base}s=598343&s2=69&p=persian.afghanistan.page&r=%24%7BscreenWidth%7Dx%24%7BscreenHeight%7Dx%24%7BscreenColorDepth%7D&re=%24%7BavailableScreenWidth%7Dx%24%7BavailableScreenHeight%7D&hl=%24%7Btimestamp%7D&lng=%24%7BbrowserLanguage%7D&x1=[urn%3Abbc%3Acps%3A3cda1d8c-ffa2-03ae-e050-380a4e8056f3]&x2=[amp]&x3=[news-persian]&x4=[fa]&x5=[%24%7BsourceUrl%7D]&x6=[%24%7BdocumentReferrer%7D]&x7=[index-section]&x8=[simorgh]&x9=[%D8%B5%D9%81%D8%AD%D9%87%2B%D8%A7%D9%81%D8%BA%D8%A7%D9%86%D8%B3%D8%AA%D8%A7%D9%86%2B-%2BBBC%2BNews%2B%D9%81%D8%A7%D8%B1%D8%B3%DB%8C]&x11=[2016-09-20T16%3A06%3A44.000Z]&x12=[2020-05-20T12%3A02%3A54.000Z]&ref=%24%7BdocumentReferrer%7D",
  },
  "transport": Object {
    "beacon": false,
    "image": true,
    "xhrpost": false,
  },
  "triggers": Object {
    "trackPageview": Object {
      "on": "visible",
      "request": "pageview",
    },
  },
}
`;

exports[`AMP persian/afghanistan IDX page Analytics chartbeat 1`] = `
Object {
  "vars": Object {
    "contentType": "Index",
    "domain": "test.bbc.co.uk",
    "sections": "Persian, Persian - IDX",
    "title": "صفحه افغانستان - BBC News فارسی",
    "uid": 50924,
    "virtualReferrer": "\${documentReferrer}",
  },
}
`;

exports[`AMP persian/afghanistan IDX page Analytics comscore 1`] = `
Object {
  "extraUrlParams": Object {
    "comscorekw": "amp",
  },
  "vars": Object {
    "c2": "17986528",
  },
}
`;

exports[`AMP persian/afghanistan IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/persian"`;

exports[`AMP persian/afghanistan IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 بی بی سی. بی بی سی مسئول محتوای سایت های دیگر نیست. سیاست ما درباره لینک دادن به سایت های دیگر."`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, فارسی",
  "url": "/persian",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 2`] = `
Object {
  "text": "چرا می‌توانید به بی‌بی‌سی اطمینان کنید؟",
  "url": "https://www.bbc.com/persian/institutional-49283091",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 3`] = `
Object {
  "text": "شرایط استفاده",
  "url": "https://www.bbc.com/persian/institutional-37474133",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 4`] = `
Object {
  "text": "درباره بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37474136",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 5`] = `
Object {
  "text": "سیاست حفظ حریم خصوصی",
  "url": "https://www.bbc.com/persian/institutional-37540067",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 6`] = `
Object {
  "text": "کوکی ها",
  "url": "https://www.bbc.co.uk/usingthebbc/cookies/",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 7`] = `
Object {
  "text": "تماس با بی بی سی",
  "url": "https://www.bbc.com/persian/institutional-37542244",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`AMP persian/afghanistan IDX page Footer Link should match text and url 9`] = `
Object {
  "text": "سیاست ما درباره لینک دادن به سایت های دیگر.",
  "url": "https://www.bbc.com/persian/institutional/2011/04/000001_links",
}
`;

exports[`AMP persian/afghanistan IDX page Header I can see the branding 1`] = `"BBC News, فارسی"`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 1`] = `
Object {
  "text": "صفحه اول",
  "url": "/persian",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 2`] = `
Object {
  "text": "کرونا",
  "url": "/persian/science-52004647",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 3`] = `
Object {
  "text": "پخش زنده",
  "url": "/persian/media-49522521",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 4`] = `
Object {
  "text": "ویدیو",
  "url": "/persian/media/video",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 5`] = `
Object {
  "text": "تلویزیون",
  "url": "/persian/tv-and-radio-37434377",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 6`] = `
Object {
  "text": "رادیو",
  "url": "/persian/tv-and-radio-37434376",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 7`] = `
Object {
  "text": "ايران",
  "url": "/persian/iran",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 8`] = `
Object {
  "text": "صفحه فعلی, افغانستان",
  "url": "/persian/afghanistan",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 9`] = `
Object {
  "text": "جهان",
  "url": "/persian/world",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 10`] = `
Object {
  "text": "هنر",
  "url": "/persian/arts",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 11`] = `
Object {
  "text": "ورزش",
  "url": "/persian/sport",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 12`] = `
Object {
  "text": "اقتصاد",
  "url": "/persian/business",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 13`] = `
Object {
  "text": "دانش",
  "url": "/persian/science",
}
`;

exports[`AMP persian/afghanistan IDX page Header Navigation link should match text and url 14`] = `
Object {
  "text": "ناظران می‌گویند",
  "url": "/persian/blogs/viewpoints",
}
`;

exports[`AMP persian/afghanistan IDX page Main heading should match text 1`] = `"صفحه افغانستان"`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-72x72.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-96x96.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-128x128.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-144x144.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-152x152.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-180x180.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-192x192.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-384x384.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/persian/images/icons/icon-512x512.png",
}
`;

exports[`AMP persian/afghanistan IDX page SEO Canonical link 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`AMP persian/afghanistan IDX page SEO Dir attribute 1`] = `"rtl"`;

exports[`AMP persian/afghanistan IDX page SEO FB admins 1`] = `"100004154058350"`;

exports[`AMP persian/afghanistan IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP persian/afghanistan IDX page SEO Heading level 1 1`] = `"صفحه افغانستان"`;

exports[`AMP persian/afghanistan IDX page SEO Lang attribute 1`] = `"fa"`;

exports[`AMP persian/afghanistan IDX page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "WebPage",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/persian/afghanistan",
        "@type": "WebPage",
        "name": "صفحه افغانستان",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
          "width": 1024,
        },
        "name": "BBC News فارسی",
        "publishingPrinciples": "https://www.bbc.com/persian/institutional-49283091",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/persian.png",
      "url": "http://localhost:7080/persian/afghanistan",
    },
  ],
}
`;

exports[`AMP persian/afghanistan IDX page SEO OG description 1`] = `"سایت فارسی بی‌بی‌سی تازه‌ترین اخبار و گزارش ها درباره ایران و افغانستان و جهان در حوزه سیاست، اقتصاد، جامعه و فرهنگ و همچنین ویدیو، گزارش‌های تصویری و برنامه‌های تلویزیون فارسی را به شما ارائه می‌دهد."`;

exports[`AMP persian/afghanistan IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`AMP persian/afghanistan IDX page SEO OG image alt 1`] = `"BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO OG locale 1`] = `"fa"`;

exports[`AMP persian/afghanistan IDX page SEO OG site name 1`] = `"BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO OG title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO OG type 1`] = `"website"`;

exports[`AMP persian/afghanistan IDX page SEO OG url 1`] = `"http://localhost:7080/persian/afghanistan"`;

exports[`AMP persian/afghanistan IDX page SEO Page title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter creator 1`] = `"@bbcpersian"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter description 1`] = `"سایت فارسی بی‌بی‌سی تازه‌ترین اخبار و گزارش ها درباره ایران و افغانستان و جهان در حوزه سیاست، اقتصاد، جامعه و فرهنگ و همچنین ویدیو، گزارش‌های تصویری و برنامه‌های تلویزیون فارسی را به شما ارائه می‌دهد."`;

exports[`AMP persian/afghanistan IDX page SEO Twitter image alt 1`] = `"BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/persian.png"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter site 1`] = `"@bbcpersian"`;

exports[`AMP persian/afghanistan IDX page SEO Twitter title 1`] = `"صفحه افغانستان - BBC News فارسی"`;

exports[`AMP persian/afghanistan IDX page Sections should match headline text 1`] = `"ویدیو و صدا"`;

exports[`AMP persian/afghanistan IDX page Sections should match headline text 2`] = `"تحلیل و گزارش"`;

exports[`AMP persian/afghanistan IDX page Story Promo Headline should match text 1`] = `"ویدیو, ابراز نگرانی سازمان ملل از افزایش کشتار غیر نظامیان در افغانستان, 2,32"`;

exports[`AMP persian/afghanistan IDX page Story Promo Image should match image 1`] = `
<amp-img
  alt="ابراز نگرانی سازمان ملل از افزایش کشتار غیر نظامیان در افغانستان"
  attribution="BBC"
  height="549"
  layout="responsive"
  src="https://ichef.bbci.co.uk/news/660/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg"
  srcset="https://ichef.bbci.co.uk/news/70/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 70w, https://ichef.bbci.co.uk/news/95/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 95w, https://ichef.bbci.co.uk/news/144/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 144w, https://ichef.bbci.co.uk/news/183/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 183w, https://ichef.bbci.co.uk/news/240/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 240w, https://ichef.bbci.co.uk/news/320/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 320w, https://ichef.bbci.co.uk/news/660/cpsprodpb/69E2/production/_112360172_p08dlh0q.jpg 660w"
  width="976"
/>
`;
